--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,3 +47,18 @@ nav a {
     font-weight: 800;
 
 }
+
+/* header related styles */
+.header{
+    background: #FFF8F3;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-pic{
+    width: 500px;
+}
