--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,29 @@ body {
     padding: 15px 35px;
 }
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-size: 18px;
+
+}
+
+/* header related styles -----------------------------------------------------------------*/
+
+.header {
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
 /* nav related styles */
 nav {
     display: flex;
@@ -48,17 +71,49 @@ nav a {
 
 }
 
-/* header related styles */
-.header{
-    background: #FFF8F3;
-}
-
-.banner{
-    padding: 30px 30px 30px 150px;
+/* banner related styles */
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
-.banner .profile-pic{
+.banner-content {
+    max-width: 585px;
+}
+
+.banner.profile-pic {
     width: 500px;
+}
+
+.banner-greetings {
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.banner-description {
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+
+/* main related styles--------------------------------------------------------- */
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
 }
