about info aligned

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,6 +48,10 @@ nav {
     justify-content: space-between;
 }
 
+nav>h3 {
+    padding-left: 150px;
+}
+
 nav>ul {
     display: flex;
     align-items: center;
@@ -109,6 +113,11 @@ nav a {
 
 
 /* main related styles--------------------------------------------------------- */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 
 /* about section styles */
 .about {
@@ -116,4 +125,11 @@ nav a {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+.about-info {
+    text-align: center;
 }
