--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -164,7 +164,42 @@ main section {
 
 /* Resume section styles */
 .resume-column-title {
-    color:#474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 0px; 
+    margin-bottom: 20px;
+}
+
+.resume-item-desc {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.resume-container hr{
+    margin: 30px 0px;
+}
+
+.download-cv {
+    text-align: center;
+    margin-top: 50px;
 }
