--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -203,3 +203,12 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+
+
+/* Footer Styles----------------------------------------------------------- */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+}
